--- a/css/global.css
+++ b/css/global.css
@@ -7,6 +7,7 @@ body {
     -webkit-font-smoothing: antialiased;
     font: 12px/1.5 Microsoft YaHei,Heiti SC,tahoma,arial,Hiragino Sans GB,"\5B8B\4F53",sans-serif;
     color: #666;
+    height: 2000px;
 }
 
 ul {
@@ -44,3 +45,10 @@ button {
     margin: 0 auto;
 }
 
+.floatLeft {
+    float: left;
+}
+
+.floatRight {
+    float: right;
+}
