--- a/css/index.css
+++ b/css/index.css
@@ -5,8 +5,6 @@
     height: 31px;
 }
 
-
-
 .header {
     position: relative;
     background-color: pink;
@@ -22,7 +20,9 @@
     background-color: skyblue;
 }
 
-
+.main-show-cover {
+    margin-bottom: 30px;
+}
 .main-show .nav-menu {
     float: left;
     height: 480px;
@@ -81,4 +81,41 @@
 .main-show .funcs .serice {
     height: 190px;
     background-color: pink;
+}
+
+
+.seckill-show-cover {
+    margin-bottom: 20px;
+}
+.seckill-show .seckill-items {
+    float: left;
+    width: 200px;
+    height: 260px;
+    background-color: pink;
+}
+.seckill-show .seckill-time {
+    width: 190px!important;
+}
+.seckill-show .seckill-slider {
+    padding: 10px;
+}
+
+
+.sale-show-cover {
+    margin-bottom: 20px;
+}
+
+.sale-show-cover .sale-show {
+
+}
+.sale-show .daliy-sale {
+    height: 340px;
+    margin: 0 10px 0 0;
+    width: 590px;
+    background-color: skyblue;
+}
+.sale-show .brand-sale {
+    height: 340px;
+    width: 590px;
+    background-color: hotpink;
 }
