--- a/css/index.css
+++ b/css/index.css
@@ -23,8 +23,12 @@
 .main-show-cover {
     margin-bottom: 30px;
 }
+.main-show {
+    display: flex;
+    justify-content: center;
+}
 .main-show .nav-menu {
-    float: left;
+    /* float: left; */
     height: 480px;
     width: 190px;
     background-color: red;
@@ -32,7 +36,7 @@
 }
 
 .main-show .slider {
-    float: left;
+    /* float: left; */
     width: 590px;
     height: 480px;
     padding-top: 10px;
@@ -46,7 +50,7 @@
 }
 
 .main-show .sales {
-    float: left;
+    /* float: left; */
     width: 190px;
     height: 480px;
     margin-right: 10px;
@@ -64,7 +68,7 @@
 }
 
 .main-show .funcs {
-    float: left;
+    /* float: left; */
     width: 189px;
     height: 480px;
     /* background-color: orange; */
@@ -87,8 +91,12 @@
 .seckill-show-cover {
     margin-bottom: 20px;
 }
+.seckill-show {
+    display: flex;
+    justify-content: center;
+}
 .seckill-show .seckill-items {
-    float: left;
+    /* float: left; */
     width: 200px;
     height: 260px;
     background-color: pink;
@@ -106,7 +114,8 @@
 }
 
 .sale-show-cover .sale-show {
-
+    display: flex;
+    justify-content: center;
 }
 .sale-show .daliy-sale {
     height: 340px;
@@ -118,4 +127,21 @@
     height: 340px;
     width: 590px;
     background-color: hotpink;
+}
+
+
+.find-commodity-cover .find-commodity {
+    display: flex;
+    justify-content: center;
+}
+.find-commodity-cover .find-commodity .find-search {
+    width: 190px;
+    height: 260px;
+    background-color: orange;
+}
+.find-commodity-cover .find-commodity .find-slider {
+    margin-left: 10px;
+    height: 260px;
+    width: 990px;
+    background-color: pink;
 }
