--- a/css/index.css
+++ b/css/index.css
@@ -147,6 +147,9 @@
     background-color: pink;
 }
 
+.shop-nav-cover {
+    margin-bottom: 20px;
+}
 .shop-nav {
     display: flex;
     justify-content: center;
@@ -168,4 +171,55 @@
 }
 .shop-nav .ticket {
     background-color: yellow;
+}
+
+
+.channels {
+    /* display: flex;
+    justify-content: center;
+    flex-wrap: wrap; */
+    display: grid;
+    /* grid-template-columns: 100px 100px 100px ;
+    grid-template-rows: 100px 100px 100px;   */
+
+}
+.channels .style1 {
+    width: 290px;
+    height: 370px;
+    margin: 0px 10px 10px 0px;
+}
+.channels .style2 {
+    width: 290px;
+    height: 180px;
+    margin: 0px 10px 10px 0px;
+    background-color: yellow;
+}
+.channels .items1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+.channels .items2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+}
+.channels .items3 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+}
+.channels .items4 {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+}
+.channels .items5 { 
+
+}
+.channels .items6 { 
+
+}
+.channels .clothes {
+    background-color: orange;
+}
+
+.channels .book {
+    background-color: pink;
 }
